tests/scripts/io-match-handling.hk.err
error: 23:5 - Expected comma after match arm expression
    Err(_) => println("Failed to append to file")
    ^^^
